oxiplate-derive/tests/broken/stray-endif.stderr
error: Unexpected 'endif' statement
 --> tests/broken/stray-endif.rs:4:36
  |
4 | #[oxiplate_inline("{{ action }}{%- endif -%}")]
  |                                    ^^^^^
